nullaway_error_8f4aa1f8-5b00-4f09-b41e-a7ba69cc3fe0.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/TileAnimation.java:23: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.frames;
    ^
    (see http://t.uber.com/nullaway )
